cpp/include/goldy.h


typedef enum GoldyBufferKind {
    GOLDY_BUFFER_KIND_SCATTERED = 0,
    GOLDY_BUFFER_KIND_BROADCAST = 1,
} GoldyBufferKind;
typedef enum GoldyResult {
    GOLDY_RESULT_OK = 0,
    GOLDY_RESULT_INVALID_ARGUMENT = 1,
    GOLDY_RESULT_NULL_POINTER = 2,
    GOLDY_RESULT_GPU_ERROR = 3,
    GOLDY_RESULT_SHADER_ERROR = 4,
    GOLDY_RESULT_RESOURCE_ERROR = 5,
    GOLDY_RESULT_INTERNAL_ERROR = 6,
} GoldyResult;
typedef enum GoldyBackendType {
    GOLDY_BACKEND_TYPE_VULKAN = 0,
    GOLDY_BACKEND_TYPE_METAL = 1,
    GOLDY_BACKEND_TYPE_DX12 = 2,
    GOLDY_BACKEND_TYPE_WEB_GPU = 3,
} GoldyBackendType;
typedef enum GoldyTextureFormat {
    GOLDY_TEXTURE_FORMAT_RGBA8_UNORM_SRGB = 0,
    GOLDY_TEXTURE_FORMAT_RGBA8_UNORM = 1,
    GOLDY_TEXTURE_FORMAT_BGRA8_UNORM_SRGB = 2,
    GOLDY_TEXTURE_FORMAT_BGRA8_UNORM = 3,
    GOLDY_TEXTURE_FORMAT_RGBA16_FLOAT = 4,
    GOLDY_TEXTURE_FORMAT_RGBA32_FLOAT = 5,
    GOLDY_TEXTURE_FORMAT_R8_UNORM = 6,
    GOLDY_TEXTURE_FORMAT_RG8_UNORM = 7,
} GoldyTextureFormat;
typedef enum GoldyDepthFormat {
    GOLDY_DEPTH_FORMAT_DEPTH16_UNORM = 0,
    GOLDY_DEPTH_FORMAT_DEPTH24_PLUS = 1,
    GOLDY_DEPTH_FORMAT_DEPTH24_PLUS_STENCIL8 = 2,
    GOLDY_DEPTH_FORMAT_DEPTH32_FLOAT = 3,
    GOLDY_DEPTH_FORMAT_DEPTH32_FLOAT_STENCIL8 = 4,
} GoldyDepthFormat;
typedef enum GoldyTextureKind {
    GOLDY_TEXTURE_KIND_INTERPOLATED = 0,
    GOLDY_TEXTURE_KIND_DIRECT = 1,
    GOLDY_TEXTURE_KIND_DIRECT_INTERPOLATED = 2,
} GoldyTextureKind;
typedef struct GoldyBuffer GoldyBuffer;
typedef struct GoldyComputeEncoder GoldyComputeEncoder;
typedef struct GoldyComputePipeline GoldyComputePipeline;
typedef struct GoldyDevice GoldyDevice;
typedef struct GoldyInstance GoldyInstance;
typedef struct GoldyRenderPipeline GoldyRenderPipeline;
typedef struct GoldyRenderTarget GoldyRenderTarget;
typedef struct GoldySampler GoldySampler;
typedef struct GoldyShaderModule GoldyShaderModule;
typedef struct GoldySurface GoldySurface;
typedef struct GoldySurfaceFrame GoldySurfaceFrame;
typedef struct GoldyTaskGraph GoldyTaskGraph;
typedef struct GoldyTexture GoldyTexture;
typedef struct GoldyAdapterInfo {
    uint32_t id;
    enum GoldyDeviceType device_type;
    char name[256];
    char vendor[64];
} GoldyAdapterInfo;
typedef struct GoldyRenderPipelineDesc {
    const struct GoldyVertexAttribute *vertex_attributes;
    uint32_t vertex_attribute_count;
    uint32_t vertex_stride;
    enum GoldyPrimitiveTopology topology;
    enum GoldyTextureFormat target_format;
    bool depth_enabled;
    enum GoldyDepthFormat depth_format;
    bool depth_write_enabled;
    enum GoldyCompareFunction depth_compare;
} GoldyRenderPipelineDesc;
typedef struct GoldySamplerDesc {
    enum GoldyAddressMode address_mode_u;
    enum GoldyAddressMode address_mode_v;
    enum GoldyAddressMode address_mode_w;
    enum GoldyFilterMode mag_filter;
    enum GoldyFilterMode min_filter;
    enum GoldyFilterMode mipmap_filter;
    float max_anisotropy;
    float lod_min_clamp;
    float lod_max_clamp;
} GoldySamplerDesc;
typedef struct GoldyTextureFlags {
    uint32_t _0;
} GoldyTextureFlags;
enum GoldyBufferKind goldy_buffer_access(const struct GoldyBuffer *buffer);
struct GoldyBuffer *goldy_buffer_create(const struct GoldyDevice *device,
                                        uint64_t size,
                                        enum GoldyBufferKind access);
struct GoldyBuffer *goldy_buffer_create_with_data(const struct GoldyDevice *device,
                                                  const uint8_t *data,
                                                  size_t size,
                                                  enum GoldyBufferKind access);
void goldy_buffer_destroy(struct GoldyBuffer *buffer);
uint64_t goldy_buffer_size(const struct GoldyBuffer *buffer);
enum GoldyResult goldy_buffer_write(const struct GoldyBuffer *buffer,
                                    uint64_t offset,
                                    const uint8_t *data,
                                    size_t size);
void goldy_clear_error(void);
void goldy_compute_encoder_bind_resources(struct GoldyComputeEncoder *encoder,
                                          const struct GoldyBuffer *const *buffers,
                                          uint32_t buffer_count);
struct GoldyComputeEncoder *goldy_compute_encoder_create(void);
void goldy_compute_encoder_destroy(struct GoldyComputeEncoder *encoder);
void goldy_compute_encoder_dispatch(struct GoldyComputeEncoder *encoder,
                                    uint32_t workgroups_x,
                                    uint32_t workgroups_y,
                                    uint32_t workgroups_z);
enum GoldyResult goldy_compute_encoder_execute(const struct GoldyComputeEncoder *encoder,
                                               const struct GoldyDevice *device);
void goldy_compute_encoder_set_pipeline(struct GoldyComputeEncoder *encoder,
                                        const struct GoldyComputePipeline *pipeline);
struct GoldyComputePipeline *goldy_compute_pipeline_create(const struct GoldyDevice *device,
                                                           const struct GoldyShaderModule *compute_shader);
void goldy_compute_pipeline_destroy(struct GoldyComputePipeline *pipeline);
uint32_t goldy_device_adapter_id(const struct GoldyDevice *device);
void goldy_device_destroy(struct GoldyDevice *device);
bool goldy_device_has_library(const struct GoldyDevice *device, const char *name);
bool goldy_device_is_valid(const struct GoldyDevice *device);
const char *goldy_get_last_error(void);
uint32_t goldy_instance_adapter_count(const struct GoldyInstance *instance);
enum GoldyBackendType goldy_instance_backend_type(const struct GoldyInstance *instance);
struct GoldyInstance *goldy_instance_create(void);
struct GoldyDevice *goldy_instance_create_device_for_adapter(const struct GoldyInstance *instance,
                                                             uint32_t adapter_id);
void goldy_instance_destroy(struct GoldyInstance *instance);
enum GoldyResult goldy_instance_get_adapter(const struct GoldyInstance *instance,
                                            uint32_t index,
                                            struct GoldyAdapterInfo *info);
struct GoldyRenderPipeline *goldy_render_pipeline_create(const struct GoldyDevice *device,
                                                         const struct GoldyShaderModule *vertex_shader,
                                                         const struct GoldyShaderModule *fragment_shader,
                                                         const struct GoldyRenderPipelineDesc *desc);
void goldy_render_pipeline_destroy(struct GoldyRenderPipeline *pipeline);
size_t goldy_render_target_buffer_size(const struct GoldyRenderTarget *target);
struct GoldyRenderTarget *goldy_render_target_create(const struct GoldyDevice *device,
                                                     uint32_t width,
                                                     uint32_t height,
                                                     enum GoldyTextureFormat format);
struct GoldyRenderTarget *goldy_render_target_create_with_depth(const struct GoldyDevice *device,
                                                                uint32_t width,
                                                                uint32_t height,
                                                                enum GoldyTextureFormat color_format,
                                                                enum GoldyDepthFormat depth_format);
void goldy_render_target_destroy(struct GoldyRenderTarget *target);
enum GoldyTextureFormat goldy_render_target_format(const struct GoldyRenderTarget *target);
bool goldy_render_target_has_depth(const struct GoldyRenderTarget *target);
uint32_t goldy_render_target_height(const struct GoldyRenderTarget *target);
enum GoldyResult goldy_render_target_read_to_buffer(const struct GoldyRenderTarget *target,
                                                    uint8_t *output,
                                                    size_t output_size);
uint32_t goldy_render_target_width(const struct GoldyRenderTarget *target);
struct GoldySampler *goldy_sampler_create(const struct GoldyDevice *device,
                                          const struct GoldySamplerDesc *desc);
struct GoldySampler *goldy_sampler_create_default(const struct GoldyDevice *device);
void goldy_sampler_destroy(struct GoldySampler *sampler);
const char *goldy_shader_builtin_vertex_color_2d(void);
struct GoldyShaderModule *goldy_shader_create(const struct GoldyDevice *device, const char *source);
void goldy_shader_destroy(struct GoldyShaderModule *shader);
struct GoldySurfaceFrame *goldy_surface_acquire(const struct GoldySurface *surface);
void goldy_surface_destroy(struct GoldySurface *surface);
enum GoldyTextureFormat goldy_surface_format(const struct GoldySurface *surface);
uint32_t goldy_surface_frame_height(const struct GoldySurfaceFrame *frame);
uint32_t goldy_surface_frame_width(const struct GoldySurfaceFrame *frame);
uint32_t goldy_surface_height(const struct GoldySurface *surface);
enum GoldyResult goldy_surface_present(const struct GoldySurface *surface,
                                       struct GoldySurfaceFrame *frame);
enum GoldyResult goldy_surface_resize(struct GoldySurface *surface,
                                      uint32_t width,
                                      uint32_t height);
enum GoldyResult goldy_surface_submit_graph_to_frame(const struct GoldySurface *surface,
                                                     struct GoldyTaskGraph *graph,
                                                     struct GoldySurfaceFrame *frame);
uint32_t goldy_surface_width(const struct GoldySurface *surface);
enum GoldyResult goldy_task_graph_clear(struct GoldyTaskGraph *graph);
struct GoldyTaskGraph *goldy_task_graph_create(void);
void goldy_task_graph_destroy(struct GoldyTaskGraph *graph);
struct GoldyTexture *goldy_texture_create(const struct GoldyDevice *device,
                                          uint32_t width,
                                          uint32_t height,
                                          enum GoldyTextureFormat format,
                                          enum GoldyTextureKind access,
                                          struct GoldyTextureFlags flags);
void goldy_texture_destroy(struct GoldyTexture *texture);
enum GoldyTextureFormat goldy_texture_format(const struct GoldyTexture *texture);
uint32_t goldy_texture_height(const struct GoldyTexture *texture);
uint32_t goldy_texture_width(const struct GoldyTexture *texture);